firmware/build/log/idf_py_stderr_output_64572
CMake Deprecation Warning at /Users/sergeybarabash/robo/esp/v5.4/esp-idf/components/mbedtls/mbedtls/CMakeLists.txt:21 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp: In member function 'virtual esp_err_t LedcPulseGenerator::init()':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp:138:15: error: redeclaration of 'esp_err_t ret'
  138 |     esp_err_t ret = ledc_timer_config(&timer_config);
      |               ^~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/ledc_pulse_gen.cpp:121:15: note: 'esp_err_t ret' previously declared here
  121 |     esp_err_t ret = gpio_config(&gpio_conf);
      |               ^~~
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/ledc_pulse_gen.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
